fix: suggestion widget visibility, bump monaco-editor 0.41.0 => 0.44.0 (#2104)

--- a/packages/uhk-web/src/app/components/macro/action-editor/tab/command/macro-command-editor.component.scss
+++ b/packages/uhk-web/src/app/components/macro/action-editor/tab/command/macro-command-editor.component.scss
@@ -8,6 +8,10 @@
     &.readonly {
         max-height: fit-content;
     }
+
+    ::ng-deep .editor-container {
+        overflow: visible;
+    }
 }
 
 :host(.active) {
